# edge_ai_demo

./: README.md  package.xml
.github/workflows/: flake8.yml  pylint.yml
.vim/.ropeproject/: objectdb
desktop_demo/: CMakeLists.txt  README.md  package.xml
desktop_demo/launch/: demo.launch  detector.launch  rs_multiple_camera.launch  segmentation.launch
desktop_demo/scripts/: show_demo.sh
desktop_demo/src/: detection_node.py  profiler.py  segmentation_node.py
desktop_demo/static/: index.html
docker/: .env  Dockerfile  README.md  docker-compose.yml  drun.sh
docker/wheels/: Dockerfile
docker/wheels_rs/: Dockerfile
docker/wheels_rs_ov/: Dockerfile  aliases.sh  entrypoint.sh
docker/wheels_rs_ov_tf/: Dockerfile
launch/: demo.launch
speed-test/google-tpu/: .gitignore  download_models.sh  readme.md  speed_test.py
speed-test/intel/: .gitignore  readme.md  speed_test.py
speed-test/intel-midas/: .gitignore  README.md  download_model.sh  test_nnio.py
speed-test/nvidia/: README.md  download_model.sh  download_models.sh
src/: detection_node.py
