<?xml version="1.0"?>
<package format="2">
  <name>desktop_demo</name>
  <version>0.0.0</version>
  <description>Edge AI Demo</description>


  <maintainer email="egor@fastsense.tech">Yegor Alexandrow</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>web_video_server</exec_depend>

  <export>
  </export>
</package>
